# shared-xarray

./: README.md  pyproject.toml  pyproject.toml~
src/shared_xarray/: __init__.py  shared_xarray.py  shared_xarray.py_dev
src/shared_xarray_simon/: __init__.py  __init__.py~  shared_xarray.py
tests/: test_sharedarray.py  test_sharedarray.py~  test_sharedarray_simon_bkp
